# QA.25

./: CMakeLists.txt  ConsoleApplication1.slnx  cppcheck_report.txt
.github/workflows/: build-and-test.yml  ci.yml  codeql.yml
ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  model.cpp  model.h  tpar.rez
UnitTest1/: UnitTest1.cpp  UnitTest1.vcxproj  UnitTest1.vcxproj.filters
